﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-04-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php:
       - extended PMA_DBI_get_databases_full() to allow limiting and sorting
       - added new function PMA_DBI_get_databases_count()
    * libraries/config.default.php:
      added new paramter to limit maximum displayed databases
    * sql.php:
       - fixed bug #1469469 cyclic redirect with sql.php as default table-page
       - re-use already existing code
    * changelog.php:
      link also js, html, pl, and sh files, FAQ entries
      and contributors to their sf.net user page, smaller regex fixes

2006-04-13 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug #1443004 part 2: export views after the tables

2006-04-12 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug #1443004 part 1: do not generate INSERT statements
      for an exported VIEW

2006-04-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css/phpmyadmin.css.php:
      fixed bug #1446017 red border in outdated themes
    * libraries/common.lib.php:
       - added option to PMA_arrayWalkRecursive() to use function also on keys
       - un-magic_quotes_gpc also keys in GPC arrays
    * libraries/db_table_exists.lib.php:
      cleanup - what a mess; fixed several undefined variables
    * tbl_printview.php:
      fixed undefined variable by including libraries/tbl_properties_common.php
    * changelog.php:
      link users, files, bugs, rfes and patches
    * libraries/footer.inc.php:
      fixed bug #1454874 Javascript error in new (not framed) print window
    * css/phpmyadmin.css.php, scripts/setup.php, test/theme.php
      themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php:
      fixed bug #1444466 theme directory not being processed correctly
    * libraries/common.lib.php, libraries/Theme_Manager.class.php: